more mobile fixes, spacing font sizes, padding

--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ table {
 
 
 html{
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 }
 
 body {
@@ -70,15 +70,14 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 }
 
 .container {
 	display: flex;
 	flex-flow: column wrap;
 	justify-content: center;
-	width: 100vw;
 	padding-top: 20vh;
 }
 
@@ -239,28 +238,27 @@ button:active {
 
 @media only screen and (max-width: 600px) {
 	.container {
-		padding-top: 10vh;
+		padding-top: 8vh;
 	}
 
 	.content_container {
-		margin-top: 100px;
-		width: 90%;
+		margin-top: 60px;
 	}
 
 	.logo {
-		height: 520px;
+		height: 240px;
 	}
 
 	.header_text {
-		font-size: 3em;
-		margin-left: 20px;
-		margin-right: 20px;
+		font-size: 1.5rem;
+		width: 85%;
+		padding-bottom: 0px;
 	}
 
   .button {
-		font-size: 2.5em;
-		padding: 24px 30px;
-		margin-top: 40px;
+		font-size: 1.2rem;
+		padding: 15px 20px;
+		margin-top: 30px;
 	}
 
 	.contact_modal_content {
@@ -274,10 +272,10 @@ button:active {
 		position: absolute;
 		right: 20px;
 		top: 20px;
-		height: 80px;
-		width: 80px;
-		border-radius: 40px;
-		font-size: 70px;
-		line-height: 80px;
+		height: 44px;
+		width: 44px;
+		border-radius: 22px;
+		font-size: 40px;
+		line-height: 44px;
 	}
 }
